suraj-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suraj-service
  namespace: default
spec:
  selector:
    app: suraj
  ports:
  - port: 80
    targetPort: 3000
  type: NodePort
