suraj-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suraj-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: suraj.local
    http:
      paths:

     # Frontend 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
    # Backend
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: suraj-service
            port:
              number: 80
